--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,12 @@ authors = ["slbsh"]
 license = "0BSD"
 
 [dependencies]
-foxhole = { git = "https://github.com/Kay-Conte/foxhole-rs" }
+# foxhole = { git = "https://github.com/Kay-Conte/foxhole-rs" }
+foxhole = { path = "../foxhole-rs" }
+mime_guess = "2.0"
 
 [build-dependencies]
-comrak = { version = "0.35", default-features = false, features = ["syntect"] }
+comrak = { version = "0.39", default-features = false, features = ["syntect"] }
 regex = "1.11"
 syntect = "5.2"
 walkdir = "2.5"
