feat: merge markdown generate and host into one

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,13 @@ authors = ["slbsh"]
 license = "0BSD"
 
 [dependencies]
+clap = { version = "4.5", features = ["derive"] }
+
+# host
 foxhole = { git = "https://github.com/Kay-Conte/foxhole-rs" }
 mime_guess = "2.0"
 
-[build-dependencies]
+# generate
 comrak = { version = "0.39", default-features = false, features = ["syntect"] }
 regex = "1.11"
 syntect = "5.2"
